# libre

./: .gitignore  CMakeLists.txt  libre.c  libre.h
test/: main.c
